--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 header {
-    height: 50px;
+    height: 70px;
     background-color: orange;
+
 }
 
 .flex {
@@ -9,6 +10,11 @@ header {
 
 header .flex {
     justify-content: space-between;
+}
+
+nav {
+
+    padding-block: 10px;
 }
 
 .logo {
@@ -29,4 +35,25 @@ nav div
     background-color: rgba(222, 220, 220, 0.757);
     width: 50px;
     height: 50px;
+}
+
+/* start main */
+.container-80 {
+    width: 80%;
+    margin: 0 auto;
+}
+
+main .flex {
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px 20px;
+    margin-top: 50px;
+
+
+}
+
+section div {
+    background-color: aqua;
+    width: 300px;
+    height: 350px;
 }
