--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,18 @@ section.flex {
 
 }
 
+/* animazione immagine */
+.card:hover .img-1 {
+    display: none;
+}
+
+.img-2 {
+    display: none;
+} 
+
+.card:hover .img-2 {
+    display: inline-block;
+}
 
 .discount{
     background-color: red;
@@ -91,7 +103,7 @@ section.flex {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
+    padding: 10px;
     background-color: white;
 }
 
